# PDFDeWM

./: .gitignore  CHANGELOG.md  GUI.py  PDFDeWM.spec  README.md  __init__.py  cli.py  core.py  editor.py  identifier.py  license.txt  models.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml  release.yml
docs/: README.md
launcher/: PDFDeWM.bat  launcher.c
scripts/: build_release.py
tests/: conftest.py  test_cli.py  test_core.py  test_editor.py  test_identifier.py
