# Build system specification following PEP 621.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# --- Project Metadata ---
[project]
name = "pdfdewm"
version = "1.2.0" # <--- Version updated to 1.2.0
authors = [
  { name="nash-dir", email="hyunsan194@gmail.com" },
]
description = "A GUI tool to easily remove watermarks from PDF files using Tkinter."
readme = "README.md"
requires-python = ">=3.8"
license = { file="license.txt" } 
keywords = ["pdf", "watermark", "remove", "gui", "tkinter", "PyMuPDF", "Pillow"]
# Classifiers for PyPI
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
]

# --- Package Dependencies ---
# Libraries required to run the GUI application.
dependencies = [
    # Core library for PDF processing
    "PyMuPDF",
    # For handling images within the GUI
    "Pillow",
]

# --- Project Links ---
[project.urls]
"Homepage" = "https://github.com/nash-dir/PDFDeWM"
"Repository" = "https://github.com/nash-dir/PDFDeWM"
"Bug Tracker" = "https://github.com/nash-dir/PDFDeWM/issues"

# --- Setuptools Configuration ---
[tool.setuptools.py-modules]
py-modules = [
    "GUI",
    "core",
    "identifier",
    "editor",
]